--- a/.github/workflows/DeepCoordinatorKitTests.yml
+++ b/.github/workflows/DeepCoordinatorKitTests.yml
@@ -12,7 +12,7 @@ jobs:
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
       
     - name: Select Xcode Version
       uses: maxim-lobanov/setup-xcode@v1
@@ -22,7 +22,7 @@ jobs:
     - name: Setup ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.0'
+        ruby-version: 2.7.2
         bundler-cache: true
         
     - name: Run tests
